+ removed parse and executed it

--- a/local.properties
+++ b/local.properties
@@ -2,10 +2,10 @@
 # Do not modify this file -- YOUR CHANGES WILL BE ERASED!
 #
 # This file must *NOT* be checked into Version Control Systems,
-# as it contains information specific to your local configuration.
+# Do not modify this file -- YOUR CHANGES WILL BE ERASED!
 #
-# Location of the SDK. This is only used by Gradle.
+# This file must *NOT* be checked into Version Control Systems,
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 27 15:33:00 IST 2017
-sdk.dir=C\:\\Users\\NovoInvent\\AppData\\Local\\Android\\sdk
+#Tue Aug 29 13:19:51 IST 2017
+sdk.dir=C\:\\Users\\Hisham\\AppData\\Local\\Android\\Sdk
